[tool.poetry]
name = "frontend-app"
version = "0.1.0"
description = ""
authors = ["ynishi18 <34960996+ynishi18@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.20.0"
dataset = "^1.6.0"
tinydb = "^4.7.1"
mimesis = "^7.0.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
